--- a/lliurex-po/lliurex-shutdowner-common/es_ES.po
+++ b/lliurex-po/lliurex-shutdowner-common/es_ES.po
@@ -9,21 +9,20 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-02-17 13:31+0100\n"
-"PO-Revision-Date: 2021-03-04 09:41+0000\n"
-"Last-Translator: Angels <gimenez_angcam@gva.es>\n"
-"Language-Team: Valencian <http://weblate.lliurex.net/projects/"
-"lliurex-shutdowner/lliurex-shutdowner-common/ca@valencia/>\n"
-"Language: ca@valencia\n"
+"PO-Revision-Date: 2021-02-17 13:47+0100\n"
+"Last-Translator: lliurex <lliurex@gva.es>\n"
+"Language-Team: Spanish\n"
+"Language: es_ES\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Weblate 4.3.1\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Poedit 2.3\n"
 
 #: ../lliurex-shutdowner-common.install/usr/sbin/shutdown-lliurex-dialog.py:50
 msgid "System will shutdown in a few seconds. Please, save your files"
-msgstr "El sistema s'apagarà en pocs segons. Guardeu els vostres fitxers."
+msgstr "El sistema se apagará en pocos segundos. Por favor, guarda tus ficheros."
 
 #: ../lliurex-shutdowner-common.install/usr/sbin/shutdown-lliurex-dialog.py:51
 msgid "Cancel shutdown"
-msgstr "Cancel·la la parada"
+msgstr "Cancelar apagado"
