--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+lliurex-shutdowner (1.9) bionic-updates; urgency=medium
+
+  * Migrated to PySide2-QML
+  * Added support to custom server shutdown
+
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Tue, 15 Jun 2021 14:19:23 +0200
+
 lliurex-shutdowner (1.8.2) bionic; urgency=medium
 
   * Fixed bug in warning shutdown window in server-lite
