--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-shutdowner (1.9.1) bionic-updates; urgency=medium
+
+  * Fixed error message in login panel
+  
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Wed, 16 Jun 2021 12:27:41 +0200
+
 lliurex-shutdowner (1.9) bionic-updates; urgency=medium
 
   * Migrated to PySide2-QML
