--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-shutdowner (2.10.1) focal; urgency=medium
+
+  * Added fissing text in zero app file
+  
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Fri, 16 Jul 2021 11:32:21 +0200
+
 lliurex-shutdowner (2.10) focal; urgency=medium
 
   * Added option to edit shutdown time with keyboard
