Updated changelog. Clean code

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-shutdowner (2.10.2) focal; urgency=medium
+
+  * Clean code
+  
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Fri, 16 Jul 2021 12:16:13 +0200
+
 lliurex-shutdowner (2.10.1) focal; urgency=medium
 
   * Added fissing text in zero app file
