--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-shutdowner (2.10.3) focal; urgency=medium
+
+  * Updated link to help
+  
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Tue, 20 Jul 2021 16:21:01 +0200
+
 lliurex-shutdowner (2.10.2) focal; urgency=medium
 
   * Clean code
