Updated changelog. Updated link to help

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-shutdowner (1.10.1) bionic-updates; urgency=medium
+
+  * Updated link to help
+  
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Tue, 20 Jul 2021 16:29:16 +0200
+
 lliurex-shutdowner (1.10) bionic-updates; urgency=medium
 
   * Added option to edit shutdown time with keyboard
