--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+lliurex-shutdowner (2.10.4) focal; urgency=medium
+
+  * Refactorize some functions
+  * Added function to remove cache when app version change
+  
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Tue, 09 Nov 2021 14:03:52 +0100
+
 lliurex-shutdowner (2.10.3) focal; urgency=medium
 
   * Updated link to help
