--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-shutdowner (2.10.5) focal-updates; urgency=medium
+
+  * Fixed shutdown message in desktops with meta client
+  
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Mon, 14 Feb 2022 07:43:18 +0100
+
 lliurex-shutdowner (2.10.4) focal; urgency=medium
 
   * Refactorize some functions
