--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-shutdowner (1.10.3) bionic-updates; urgency=medium
+
+  * Fixed shutdown message in desktops with meta client
+  
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Mon, 14 Feb 2022 08:34:58 +0100
+
 lliurex-shutdowner (1.10.2) bionic-updates; urgency=medium
 
   * Refactorize some functions
