--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-shutdowner (2.11.1) focal; urgency=medium
+
+  * Fixed window position in screen
+  
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Thu, 15 Jun 2023 08:13:36 +0200
+
 lliurex-shutdowner (2.11) focal; urgency=medium
 
   * New style for GUI
