--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-shutdowner (2.21.2) jammy; urgency=medium
+
+  * Initial release for Jammy
+
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Thu, 31 Aug 2023 12:52:00 +0200
+
 lliurex-shutdowner (2.11.2) focal; urgency=medium
 
   * Fixed valencian translations
