--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+lliurex-shutdowner (2.11.3) focal; urgency=medium
+
+  * Refactorize code
+  * Fixed performance in clientized desktop
+
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Wed, 22 Nov 2023 14:23:52 +0100
+
 lliurex-shutdowner (2.11.2) focal; urgency=medium
 
   * Fixed valencian translations
