--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+lliurex-shutdowner (2.21.3) jammy; urgency=medium
+
+  * Refactorized code
+  * Fixed performance in clientized desktop
+
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Tue, 05 Dec 2023 15:37:32 +0100
+
 lliurex-shutdowner (2.21.2) jammy; urgency=medium
 
   * Initial release for Jammy
