--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-shutdowner (2.31.3) noble; urgency=medium
+
+  * Initial release for noble
+
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Mon, 14 Oct 2024 14:42:47 +0200
+
 lliurex-shutdowner (2.21.3) jammy; urgency=medium
 
   * Refactorized code
