--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-shutdowner (2.31.4) noble; urgency=medium
+
+  * Changed QApplication by QGuiApplication
+
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Tue, 15 Oct 2024 09:20:41 +0200
+
 lliurex-shutdowner (2.31.3) noble; urgency=medium
 
   * Initial release for noble
