--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-shutdowner (2.31.5) noble; urgency=medium
+
+  * Reverted last change
+
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Tue, 22 Oct 2024 08:39:52 +0200
+
 lliurex-shutdowner (2.31.4) noble; urgency=medium
 
   * Changed QApplication by QGuiApplication
