--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-shutdowner (2.31.6) noble; urgency=medium
+
+  * Fixed to run in Wayland
+
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Wed, 20 Nov 2024 13:04:28 +0100
+
 lliurex-shutdowner (2.31.5) noble; urgency=medium
 
   * Reverted last change
