Updated changelog. Fixed launcher to Wayland

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-shutdowner (2.31.7) noble; urgency=medium
+
+  * Fixed launchers to show app icon in Wayland
+
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Fri, 22 Nov 2024 10:57:30 +0100
+
 lliurex-shutdowner (2.31.6) noble; urgency=medium
 
   * Fixed to run in Wayland
