--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-shutdowner (2.21.4) jammy-testing; urgency=medium
+
+  * Supported new classroom model
+  
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Wed, 12 Mar 2025 12:52:28 +0100
+
 lliurex-shutdowner (2.21.3) jammy; urgency=medium
 
   * Refactorized code
