--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-shutdowner (2.21.5) jammy-testing; urgency=medium
+
+  * Clean code
+  
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Fri, 14 Mar 2025 09:10:09 +0100
+
 lliurex-shutdowner (2.21.4) jammy-testing; urgency=medium
 
   * Supported new classroom model
