--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-shutdowner (2.32.1) noble; urgency=medium
+
+  * Clean code
+
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Fri, 14 Mar 2025 11:06:07 +0100
+
 lliurex-shutdowner (2.32) noble; urgency=medium
 
   * Changed to support new classroom model
