--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-shutdowner (2.32.2) noble; urgency=medium
+
+  * Improved stability
+
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Thu, 20 Mar 2025 14:01:26 +0100
+
 lliurex-shutdowner (2.32.1) noble; urgency=medium
 
   * Clean code
