--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-shutdowner (2.32.4) noble; urgency=medium
+
+  * Improved transitions between stacks
+  
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Mon, 05 May 2025 12:22:35 +0200
+
 lliurex-shutdowner (2.32.3) noble; urgency=medium
 
   * Fixed load server info function
