Updated changelog. Improved transitions

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-shutdowner (2.21.8) jammy-testing; urgency=medium
+
+  * Improved transitions between stacks
+  
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Mon, 05 May 2025 13:59:57 +0200
+
 lliurex-shutdowner (2.21.7) jammy-testing; urgency=medium
 
   * Fixed load server info function
