--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-shutdowner (2.21.10) jammy-testing; urgency=medium
+
+  * Detected adi in login
+  
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Fri, 06 Jun 2025 12:30:43 +0200
+
 lliurex-shutdowner (2.21.9) jammy-testing; urgency=medium
 
   * Replaced natfree-references
