--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-shutdowner (2.32.6) noble; urgency=medium
+
+  * Connected adi with localhost
+  
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Fri, 06 Jun 2025 12:39:13 +0200
+
 lliurex-shutdowner (2.32.5) noble; urgency=medium
 
   * Replaced natfree references
