--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-shutdowner (2.21.11) jammy-testing; urgency=medium
+
+  * Fixed detection of adi or tie
+  
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Fri, 13 Jun 2025 12:52:33 +0200
+
 lliurex-shutdowner (2.21.10) jammy-testing; urgency=medium
 
   * Detected adi in login
