--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-shutdowner (2.21.5) jammy; urgency=medium
+
+  * Fixed minor bug in lancher
+  
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Thu, 24 Jul 2025 08:07:10 +0200
+
 lliurex-shutdowner (2.21.4) jammy; urgency=medium
 
   * Changed to support new model
